# lighthouse-agent

.cloudbuild/ci/: lint.yaml
lighthouse-auditor/: .gitignore  Dockerfile  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.ipynb
lighthouse-auditor/app/: agent.py  server.py
lighthouse-auditor/app/utils/: github_integration.py  lighthouse.py  tracing.py  typing.py
lighthouse-auditor/deployment/cd/: deploy-to-prod.yaml  staging.yaml
lighthouse-auditor/deployment/ci/: pr_checks.yaml
lighthouse-auditor/deployment/terraform/: backend.tf  build_triggers.tf  variables.tf
lighthouse-auditor/deployment/terraform/dev/: backend.tf  variables.tf
lighthouse-auditor/deployment/terraform/vars/: example.tfvars
lighthouse-auditor/frontend/utils/: stream_handler.py
lighthouse-auditor/notebooks/: evaluating_langgraph_agent.ipynb  lighthouse_auditor_development-old.ipynb
